# myelin-latent-bus

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  EXPERIMENTS.md
examples/kinship/: fact_F.txt  puzzle.txt  query.txt
src/latent_bus/: __init__.py  cli.py  injection.py  model_io.py  prepare.py  run.py
tests/: test_donor_extraction.py  test_imports.py  test_injection.py  test_model_io.py  test_parity_placeholder.py  test_scoring.py
